--- a/foundations/flex/02-flex-header/style.css
+++ b/foundations/flex/02-flex-header/style.css
@@ -1,6 +1,8 @@
 .header  {
   font-family: monospace;
   background: papayawhip;
+  margin:auto;
+  padding:10px;
 }
 
 .logo {
@@ -22,4 +24,22 @@ a {
   padding: 8px;
   /* this removes the line under the links */
   text-decoration: none;
+}
+
+.header{
+  display:flex;
+  align-items: center;
+  gap: 15px;
+  justify-content: space-between;
+  margin:auto;
+}
+
+ul{
+  display:flex;
+  justify-content:center;
+  gap:15px;
+}
+
+.left-links ul{
+  padding:0;
 }
