--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -12,6 +12,14 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display:flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.links{
+  display:flex;
+  gap: 15px;
 }
 
 .profile-image {
@@ -20,6 +28,7 @@ body {
   border-radius: 50%;
   width: 48px;
   height: 48px;
+  margin-left:20px;
 }
 
 .logo {
@@ -27,6 +36,7 @@ body {
   font-size: 32px;
   font-weight: 900;
   font-style: italic;
+  margin-left: 15px;
 }
 
 button {
@@ -35,6 +45,12 @@ button {
   background: rebeccapurple;
   color: white;
   padding: 8px 24px;
+  margin-left:auto;
+}
+
+.profile-image{
+  flex-shrink: 0;
+  margin-right: 15px;
 }
 
 a {
