--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -10,6 +10,30 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  text-align: center;
+}
+
+.items{
+  display:flex;
+  justify-content: center;
+  margin-top: 32px;
+  gap:52px
+}
+
+.text{
+  display:flex;
+  flex-wrap: wrap;
+}
+
+.item{
+  text-align: center;
+  max-width: 200px;
+  flex:auto;  
+}
+
+.barberry,
+.saffron{
+  min-width: 0;
 }
 
 /* do not edit this footer */
