--- a/foundations/flex/06-flex-layout/style.css
+++ b/foundations/flex/06-flex-layout/style.css
@@ -5,10 +5,46 @@ body {
   margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+  display:flex;
+  flex-direction: column;
+}
+
+.header,
+.footer{
+  display:flex;
+  justify-content: space-between;
+  padding:16px;
+}
+
+.left-links,
+.right-links{
+  display:flex;
+  gap:8px;
+}
+
+ul{
+  list-style-type: none;
+  margin:0;
+  padding:0;
+}
+
+a{
+  text-decoration: none;
+  color: black;
 }
 
 img {
   width: 600px;
+}
+
+.content{
+  display:flex;
+  flex-direction: column;
+  margin: auto;
+  align-items: center;
+  flex:1;
+  min-width: none;
+  justify-content: center;
 }
 
 button {
@@ -16,6 +52,8 @@ button {
   border: none;
   border-radius: 8px;
   background: #eee;
+  margin:8px;
+  padding:8px;
 }
 
 input {
@@ -23,4 +61,8 @@ input {
   border-radius: 16px;
   padding: 8px 24px;
   width: 400px;
+}
+
+.footer{
+  background-color: #eeeeee;
 }
