fix html and css styling for exercise 7
tag divs to set a container around sidebar and
cards. style appropriately to set the correct
dementions to the sidebar and cards.

this assignment is incomplete

--- a/foundations/flex/07-flex-layout-2/style.css
+++ b/foundations/flex/07-flex-layout-2/style.css
@@ -4,6 +4,10 @@ body {
   min-height: 100vh;
 }
 
+.container{
+  display:flex;
+}
+
 .header {
   height: 72px;
   background: darkmagenta;
@@ -20,10 +24,22 @@ body {
   width: 300px;
   background: royalblue;
   box-sizing: border-box;
+  display:flex;
+  flex-shrink: 0;
+  
+}
+
+.cards{
+  display:flex;
+  flex-wrap: wrap;
+  padding:48px;
 }
 
 .card {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+  width:250px;
+  padding:20px;
+  margin:20px
 }
